--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "events": "^1.1.1",
+    "flux": "^3.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
