--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "events": "^1.1.1",
-    "flux": "^3.1.3",
     "font-awesome": "^4.7.0",
+    "immutable": "^3.8.2",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-masonry-component": "^6.0.2",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
