--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "font-awesome": "^4.7.0",
     "immutable": "^3.8.2",
     "jquery": "^3.2.1",
+    "material-ui": "^0.20.0",
     "mongodb": "^3.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
