--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongodb": "^3.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.0.0",
     "react-masonry-component": "^6.0.2",
     "react-redux": "^5.0.6",
